add send email endpoint
