# internal/gen/http/email/server/paths.go
@@ -1,0 +1,14 @@
+// Code generated by goa v3.13.1, DO NOT EDIT.
+//
+// HTTP request path constructors for the email service.
+//
+// Command:
+// $ goa gen github.com/tomchan123/go-news-mailer/internal/design --output
+// ./internal
+
+package server
+
+// SendOneEmailEmailPath returns the URL path to the email service sendOneEmail HTTP endpoint.
+func SendOneEmailEmailPath() string {
+	return "/api/email"
+}
