# internal/gen/http/email/server/server.go
@@ -1,0 +1,129 @@
+// Code generated by goa v3.13.1, DO NOT EDIT.
+//
+// email HTTP server
+//
+// Command:
+// $ goa gen github.com/tomchan123/go-news-mailer/internal/design --output
+// ./internal
+
+package server
+
+import (
+	"context"
+	"net/http"
+
+	email "github.com/tomchan123/go-news-mailer/internal/gen/email"
+	goahttp "goa.design/goa/v3/http"
+	goa "goa.design/goa/v3/pkg"
+)
+
+// Server lists the email service endpoint HTTP handlers.
+type Server struct {
+	Mounts       []*MountPoint
+	SendOneEmail http.Handler
+}
+
+// MountPoint holds information about the mounted endpoints.
+type MountPoint struct {
+	// Method is the name of the service method served by the mounted HTTP handler.
+	Method string
+	// Verb is the HTTP method used to match requests to the mounted handler.
+	Verb string
+	// Pattern is the HTTP request path pattern used to match requests to the
+	// mounted handler.
+	Pattern string
+}
+
+// New instantiates HTTP handlers for all the email service endpoints using the
+// provided encoder and decoder. The handlers are mounted on the given mux
+// using the HTTP verb and path defined in the design. errhandler is called
+// whenever a response fails to be encoded. formatter is used to format errors
+// returned by the service methods prior to encoding. Both errhandler and
+// formatter are optional and can be nil.
+func New(
+	e *email.Endpoints,
+	mux goahttp.Muxer,
+	decoder func(*http.Request) goahttp.Decoder,
+	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
+	errhandler func(context.Context, http.ResponseWriter, error),
+	formatter func(ctx context.Context, err error) goahttp.Statuser,
+) *Server {
+	return &Server{
+		Mounts: []*MountPoint{
+			{"SendOneEmail", "POST", "/api/email"},
+		},
+		SendOneEmail: NewSendOneEmailHandler(e.SendOneEmail, mux, decoder, encoder, errhandler, formatter),
+	}
+}
+
+// Service returns the name of the service served.
+func (s *Server) Service() string { return "email" }
+
+// Use wraps the server handlers with the given middleware.
+func (s *Server) Use(m func(http.Handler) http.Handler) {
+	s.SendOneEmail = m(s.SendOneEmail)
+}
+
+// MethodNames returns the methods served.
+func (s *Server) MethodNames() []string { return email.MethodNames[:] }
+
+// Mount configures the mux to serve the email endpoints.
+func Mount(mux goahttp.Muxer, h *Server) {
+	MountSendOneEmailHandler(mux, h.SendOneEmail)
+}
+
+// Mount configures the mux to serve the email endpoints.
+func (s *Server) Mount(mux goahttp.Muxer) {
+	Mount(mux, s)
+}
+
+// MountSendOneEmailHandler configures the mux to serve the "email" service
+// "sendOneEmail" endpoint.
+func MountSendOneEmailHandler(mux goahttp.Muxer, h http.Handler) {
+	f, ok := h.(http.HandlerFunc)
+	if !ok {
+		f = func(w http.ResponseWriter, r *http.Request) {
+			h.ServeHTTP(w, r)
+		}
+	}
+	mux.Handle("POST", "/api/email", f)
+}
+
+// NewSendOneEmailHandler creates a HTTP handler which loads the HTTP request
+// and calls the "email" service "sendOneEmail" endpoint.
+func NewSendOneEmailHandler(
+	endpoint goa.Endpoint,
+	mux goahttp.Muxer,
+	decoder func(*http.Request) goahttp.Decoder,
+	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
+	errhandler func(context.Context, http.ResponseWriter, error),
+	formatter func(ctx context.Context, err error) goahttp.Statuser,
+) http.Handler {
+	var (
+		decodeRequest  = DecodeSendOneEmailRequest(mux, decoder)
+		encodeResponse = EncodeSendOneEmailResponse(encoder)
+		encodeError    = EncodeSendOneEmailError(encoder, formatter)
+	)
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
+		ctx = context.WithValue(ctx, goa.MethodKey, "sendOneEmail")
+		ctx = context.WithValue(ctx, goa.ServiceKey, "email")
+		payload, err := decodeRequest(r)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		res, err := endpoint(ctx, payload)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		if err := encodeResponse(ctx, w, res); err != nil {
+			errhandler(ctx, w, err)
+		}
+	})
+}
